# Skills

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml  test.http
.github/workflows/: Deploy.yml  Update submodules.yaml
backend/: Makefile  ruff.toml
backend/api/: apps.py  serializers.py  urls.py  views.py
backend/api/v1/: serializers.py  urls.py  views.py
backend/core/: settings.py  settings_for_tests.py  urls.py
backend/fixtures/: data.json
backend/skills/: admin.py  apps.py  factories.py  models.py
backend/skills/management/commands/: create_resources.py  create_skills.py
backend/skills/migrations/: 0001_initial.py  0002_skill_level.py  0003_alter_resourcelibrary_description_and_more.py
backend/templates/socialaccount/: login.html
backend/tests/: fixtures.py  test_models.py  test_urls.py  test_views.py
backend/users/: admin.py  apps.py  factories.py  models.py  serializers.py
backend/users/migrations/: 0001_initial.py  0002_alter_userskill_skill.py  0002_remove_user_trecker_id_userresources_and_more.py  0002_rename_userskills_userskill.py  0002_userresources_userprofile_resources.py  0003_alter_userprofile_options.py  0003_remove_user_trecker_id.py
infra/dev/: docker-compose.local.yaml  nginx.conf
infra/prod/: docker-compose.yaml  nginx.conf
